assets/css/main.css
/* ... */
#theme-toggle-wrapper:has(.form-check-input:checked) i.bi-moon-stars {
  display: block;
}

.form-check-input {
  background-color: var(--accent-color);
}

.form-check-input:checked {
  background-color: var(--accent-color);
  border-color: transparent !important;
}

.form-check-input:focus {
  border-color: none !important;
  box-shadow: none;
}

.theme-toggle-wrapper {
  display: flex;
  align-items: center;
  gap: 5px;
  z-index: 9999;
  /* position: fixed; */
  /* top: 15px; */
  /* right: 15px; */
}

i.bi-brightness-low {
  font-size: 24px;
  line-height: 0;
  color: var(--nav-color);
}

i.bi-moon-stars {
  color: var(--nav-color);
  line-height: 0;
  font-size: 17px;
  margin-right: 5px;
  display: none;
}


/* Gallery */
/* 
.swiper {
  padding-bottom: 50px;
} */

/* .swiper-wrapper {
  position: relative;
  overflow-y: hidden;
} */

/* @media (min-width: 768px) {
  .swiper-wrapper {
    max-height: 115px;
  }
} */

@media (min-width: 768px) {
  .swiper-wrapper {
    max-height: 145px;
  }
}

@media (max-width: 767px) {
  .swiper-wrapper {
    max-height: 215px;
  }
}


.swiper-wrapper {
  display: flex;
  align-items: center;
}

.swiper-container {
  position: relative;
}

#swiper-pagination {
    bottom: -32px;
}

.download-link {
  color: var(--contrast-color);
  border-radius: 8px;
  padding: 12px;
  background-color: var(--accent-color);
}

/* PORTFOLIO */

section#resume {
  padding-bottom: 0;
}

.container-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
  gap: 32px;
  max-width: 1240px;
  margin-inline: auto;
}

.work-experience-content {
  display: flex;
  flex-direction: column;
}

.work-experience-item {
  position: relative;
  display: flex;
  flex-direction: column;
  padding-inline: 32px;
  padding-bottom: 48px;
  gap: 16px;
}

.work-experience-item:last-child {
  padding-bottom: 96px;
}

.work-experience-item .col-a {
  width: 100%;
  padding: 0;
}

.work-experience-item .col-b {
  width: 100%;
  margin: 0;
  }

  .work-experience-item::before {
    content: '';
    width: 25px;
    height: 25px;
    background: url('../img/circle.svg') 0 0 no-repeat;
    position: absolute;
    top: 0;
    left: -11px;
  }

 
  .work-experience-item::after {
    content: '';
    width: 1px;
    height: calc(100% - 26px);
    border-right: 1px dashed var(--accent-color);
    position: absolute;
    top: 25px;
    left: 0;
  }


@media (min-width: 768px) {

  .work-experience-item {
    flex-direction: row;
    padding: 0;
    gap: 64px;
  }

  .work-experience-item .col-a {
    position: relative;
    padding-right: 48px;
    padding-bottom: 32px;
    width: 30%;
  }

  .work-experience-item .col-b {
    position: relative;
    display: flex;
    flex-direction: column;
    padding-bottom: 64px;
    width: 70%;
  }

  .work-experience-item .col-a::before {
    content: '';
    width: 25px;
    height: 25px;
    background: url('../img/circle.svg') 0 0 no-repeat;
    position: absolute;
    top: 0;
    right: -14px;
  }

  .work-experience-item .col-a::after {
    content: '';
    width: 1px;
    height: calc(100% - 26px);
    border-right: 1px dashed var(--accent-color);
    position: absolute;
    top: 25px;
    right: -2px;
  }

  .work-experience-item::before {
    display: none;
  }
  
  .work-experience-item::after {
    display: none;
  }

  .work-experience-item:last-child {
    padding: 0;
  }

  .work-experience-item:last-child .col-b {
    padding-bottom: 96px;
  }
  
}

   


/*--------------------------------------------------------------
# Portfolio Section
--------------------------------------------------------------*/
.portfolio .portfolio-filters {
  padding: 0;
  margin: 0 auto 20px auto;
  list-style: none;
  text-align: left;
}

.portfolio .portfolio-filters li {
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-weight: 500;
  line-height: 1;
  margin: 8px 4px;
  transition: all 0.3s ease-in-out;
  background: var(--background-color);
}

.portfolio .portfolio-filters li:hover,
.portfolio .portfolio-filters li.filter-active {
  /* color: var(--accent-color); */
  background: var(--accent-color);
}

.portfolio .portfolio-filters li:first-child {
  margin-left: 0;
}

.portfolio .portfolio-filters li:last-child {
  margin-right: 0;
}

@media (max-width: 575px) {
  .portfolio .portfolio-filters li {
    font-size: 14px;
    margin: 8px 4px;
  }
}

.portfolio .portfolio-content {
  position: relative;
  overflow: hidden;
  border-radius: 16px;
  background: var(--background-color);
}

.portfolio .portfolio-content img {
  transition: 0.3s;
}

.portfolio .portfolio-content .portfolio-info {
  opacity: 0;
  position: absolute;
  inset: 0;
  z-index: 3;
  transition: all ease-in-out 0.3s;
  background: rgba(0, 0, 0, 0.6);
  padding: 15px;
}

.portfolio .portfolio-content .portfolio-info h4 {
  font-size: 14px;
  padding: 5px 10px;
  font-weight: 400;
  color: #ffffff;
  display: inline-block;
  background-color: var(--accent-color);
}

.portfolio .portfolio-content .portfolio-info p {
  position: absolute;
  bottom: 10px;
  text-align: center;
  display: inline-block;
  left: 0;
  right: 0;
  font-size: 16px;
  font-weight: 600;
  color: rgba(255, 255, 255, 0.8);
}

.portfolio .portfolio-content .portfolio-info .preview-link,
.portfolio .portfolio-content .portfolio-info .details-link {
  position: absolute;
  left: 24px;
  font-size: 26px;
  top: 24px;
  color: #fff;
  transition: 0.3s;
  line-height: 1.2;
}

.portfolio .portfolio-content .portfolio-info .preview-link:hover,
.portfolio .portfolio-content .portfolio-info .details-link:hover {
  color: var(--accent-color);
}

.portfolio .portfolio-content .portfolio-info .details-link {
  left: 50%;
  font-size: 34px;
  line-height: 0;
}

.portfolio .portfolio-content:hover .portfolio-info {
  opacity: 1;
}

.portfolio .portfolio-content:hover img {
  transform: scale(1.1);
}

